--- a/foro.html
+++ b/foro.html
@@ -16,7 +16,7 @@
 			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
-		 <nav class="botoneraheader">
+		<nav class="botoneraheader">
 			<ul>
 				<li><a href="#">Restaurantes</a></li>
 				<li><a href="#">Recetas</a>
@@ -34,95 +34,86 @@
 	
 	<main>
 		<section>
-			<h1>Bienvenidx a la comunidad</h1>
-			<h2>Tac Free</h2>
+			<h1 class="forobienvenido">Bienvenidx a la comunidad</h1>
+			<h2 class="forotacfree">Tac Free</h2>
 			<p>Donde podrás dejar los comentarios y tips que quieras.  
 			  Además vas a encontrar páginas que recomendamos para el mundo celíaco.</p>
 		</section>
-		<section clas="preguntas">
+		
+		<section class="preguntas">
 			<h3>Preguntas que podrían interesarte</h3>
 			<article>
 				<h4>Florencia</h4>
 				<p>Hace muy poco me confirmaron el diagnóstico... ¿Es muy complicado respetar una dieta sin tacc?</p>
 				<input class="boton" type="button" value="Ver 3 respuestas|Responder">
 			</article>
+			
 			<article>
 				<h4>Claudia</h4>
 				<p>Mi hijo es celíaco y esta por cumplir 5 años, que torta me recomiendan que le prepare?</p>
 				<input class="boton" type="button" value="Ver 6 respuestas|Responder">
 			</article>
+			
 			<article>
 				<h4>Santiago</h4>
 				<p>¿Qué pasa cuando un celíaco come gluten, existe una reacción inmediata o puede ser acumulativa y presentar síntomas después?</p>
 				<input class="boton" type="button" value="Ver 2 respuestas|Responder">
 			</article>
+			
 		</section>
+		
 		<section class="sitios">
 			<h3>Sitios que podrían interesarte</h3>
+			
 			<article>
 				<input class="boton" type="button" value="Ver blog">
 				<p>Es un blog español donde vas a poder encontrar recetas, experiencias, reflexiones e información sobre celíaquia. Además tiene una tienda online donde vas a poder adquirir sus productos.</p>
 			</article>
+			
 			<article>
 				<input class="boton" type="button" value="Ver Instagram">
 				<p>Es una ilustradora que dibuja  situaciones cotidianas a las que se enfrentan los celíacos que seguro te vas a sentir identificado.</p>
 			</article>
+			
 			<article>
 				<input class="boton" type="button" value="Ver la web">
 				<p>Donde podrás encontrar recetas sin TACC muy fáciles y mucha información útil.</p>
 			</article>
+			
 		</section>
+		
 	</main>
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	<footer>
-		<div>
+		<section>
 			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
-		</div>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
 			<h5>Contacto</h5>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
-		</article>
+		</section>
 		
-	
 	</footer>
 	
-	
-	
 </body>
-	
-	
 	
 </html>
