--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -15,7 +15,7 @@
 			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
-		 <nav class="botoneraheader">
+		<nav class="botoneraheader">
 			<ul>
 				<li><a href="#">Restaurantes</a></li>
 				<li><a href="#">Recetas</a>
@@ -31,75 +31,70 @@
 		
 	</header>
 	
-	
 	<main class="maininicio">
 		
 		<section class="sectionbienvenida">
-		<article class="columnaizq">
-		</article>
-		
-		<article class="columnader">
-			<div>
-				<h1>¡Gracias por unirte!</h1>
-			<p>Con nosotros vas a poder conocer variedad de recetas y restaurantes aptos para celiacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
-		
-			</div>
-			
-	<article>
-			<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
-			<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+			<article class="columnaizq">
 			</article>
-		</article>
+		
+			<section class="columnader">
+				<div>
+					<h1>¡Gracias por unirte!</h1>
+					<p class="textoquepodesencontrarbienvenida">Con nosotros vas a poder conocer variedad de recetas y restaurantes aptos para celiacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
+				</div>
+			
+				<div>
+					<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
+					<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+				</div>
+				
+			</section>
+			
 		</section>
 		
-			<div class="circulos">
+		<section class="circulos">
 			<article>	
-				<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-				<h3>Restaurantes</h3>
+					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
+					<h3>Restaurantes</h3>
 			</article>
 			<div>
 				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
 				<h3>Recetas</h3>
-			</div>	
 			</div>
+		</section>
 		
-				
 	</main>
 	
-	
-	
 	<footer>
-		<div>
-			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+		
+		<section>
+			<img src="img/logo a inicio.png" width="81" height="43" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
-		</div>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
 			<h5>Contacto</h5>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
-		</article>
+		</section>
 		
-	
 	</footer>
-	
-	
-
-
-	
 	
 </body>
 </html>
