--- a/pizza.html
+++ b/pizza.html
@@ -16,7 +16,7 @@
 			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
-		 <nav class="botoneraheader">
+		<nav class="botoneraheader">
 			<ul>
 				<li><a href="#">Restaurantes</a></li>
 				<li><a href="#">Recetas</a>
@@ -48,6 +48,7 @@
 				Ya sea que es una pizza para celíacos o la prepares porque no consumís tacc por elección, esta pizza sin harina de trigo es todos lo que está bien. ¡Manos a la masa!
 				La pizza casera debería ser considerada un tesoro de la humanidad, cada una de sus variantes se merece un lugar en el podio: la clásica, vegetariana, vegana y claro gluten free.</p>
 		</section>
+		
 		<section class="receta">
 			<h2>Elaboración de la masa madre</h2>
 			<p>-En un bol mezclá la premezcla para panificados y la Maizena.
@@ -76,18 +77,19 @@
 		<section>
 			<h4>Ingredientes</h4>
 			<p>300 gramos de premezcla autorizada sin tacc
-			   80 gramos de Maizena
-			   150 a 180 cc de agua
-			   25 gramos de levadura fresca sin tacc
-			   ½ taza de salsa para pizza
-			   3 cucharadas de aceite de oliva
-			   2 tomates cortados en rodajas
-			   Albahaca fresca
-			   100 gramos de queso fresco
-			   150 gramos de queso provolone
-			   1 cucharada de orégano
-			   Ají molido</p>
+			80 gramos de Maizena
+			150 a 180 cc de agua
+			25 gramos de levadura fresca sin tacc
+			½ taza de salsa para pizza
+			3 cucharadas de aceite de oliva
+			2 tomates cortados en rodajas
+			Albahaca fresca
+			100 gramos de queso fresco
+			150 gramos de queso provolone
+			1 cucharada de orégano
+			Ají molido</p>
 		</section>
+		
 		<section>
 			<h4>Comentarios</h4>
 			<h5>Josefina</h5>
@@ -105,45 +107,37 @@
 			<p>Tacos</p>
 		</section>
 	
-
-	
 	</main>
-	
-	
-	
-	
-	
-	
-	
+
 	<footer>
-		<div>
-			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+		<section>
+			<img src="img/logo a inicio.png" width="81" height="43" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
-		</div>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
 			<h5>Contacto</h5>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
-		</article>
-		
-	
+		</section>
+
 	</footer>
-	
-	
-	
+
 </body>
 </html>
