--- a/restaurantes.html
+++ b/restaurantes.html
@@ -16,7 +16,7 @@
 			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
-		 <nav class="botoneraheader">
+		<nav class="botoneraheader">
 			<ul>
 				<li><a href="#">Restaurantes</a></li>
 				<li><a href="#">Recetas</a>
@@ -61,55 +61,54 @@
 			</section>
 		</aside>
 		
-		
 		<div class="columnader">
-			<section >
+			<section class="sintaxis">
 				<h1>Sintaxis Palermo</h1>
 				<p class="restaurante">Sintaxis es el sueño cumplido de una familia que imaginó un lugar diferente. El 17 de julio de 2012 abrió sus puertas <span class="bold">el primer restaurante de la República Argentina con la cocina estrictamente libre de gluten.</span> Sintaxis es la marca preferida entre la comunidad celíaca y quienes eligen comer sin gluten. Sus estándares de calidad y cuidado en la producción han generado gran fidelidad y seguridad para con los clientes.
 				Un amplio salón con capacidad para 60 cubiertos y un sector al aire libre que invita a desconectarse por un largo rato. Decisiones implícitas en cada detalle dan como resultado una ambientación con un sutil equilibrio entre lo artesanal/ecológico y el puro diseño.</p>
 			</section>
+			
 			<section class="carrusel">
 				<h2>Galería</h2>
-			
 			</section>
+			
 			<section class="mapa">
 				<h2>¿Cómo llegar?</h2>
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7072427834837!2d-58.43169238103839!3d-34.58627351072857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5860d9ab49b%3A0xb0e5ebd5982a548a!2sSintaxis%20Palermo!5e0!3m2!1ses-419!2sar!4v1654176665470!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</section>
 		</div>
 		
-
 	</main>
 	
-	
 	<footer>
-		<div>
-			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+		<section>
+			<img src="img/logo a inicio.png" width="81" height="43" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
-		</div>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
 			<h5>Contacto</h5>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
-		</article>
+		</section>
 		
-	
 	</footer>
-	
-	
+
 </body>
 </html>
