--- a/recetas.html
+++ b/recetas.html
@@ -36,39 +36,35 @@
 
 	
 	</main>
-	
-	
-	
-	
-	
-	
-	
+
 	<footer>
-		<div>
-			<img src="img/logo a inicio.png" width="81" height="43" alt=""/>
+		<section>
+			<img src="img/logo a inicio.png" width="81" height="43" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
-		</div>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-	    		<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-	    		<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-	    		<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
 			<h5>Contacto</h5>
-		</article>
-		<article>
+		</section>
+		
+		<section>
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
-		</article>
+		</section>
 		
-	
 	</footer>
 	
 	
