--- a/pizza.html
+++ b/pizza.html
@@ -13,7 +13,7 @@
 	<header>
 		
 		<div>
-			<a href="gracias por unirte.html"><img src="img/logo a inicio.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		<nav class="botoneraheader">
@@ -111,7 +111,7 @@
 
 	<footer>
 		<section>
-			<img src="img/logo a inicio.png" width="81" height="43" alt="logo"/>
+			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
