Arreglo en menú y submenu

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<li><a href="#">Restaurantes</a></li>
 				<li><a href="#">Recetas</a>
 					<ul class="opciones">
-						<li><a href="#">Dulces</a></li>
-						<li><a href="#">Saladas</a></li>
+						<li class="submenu"><a href="#">Dulces</a></li>
+						<li class="submenu"><a href="#">Saladas</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Foro</a></li>
