--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -14,14 +14,20 @@
 		</section>
 		
 		<section class="Formulario-inicio">
-			<h1>Email</h1>
-			<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
-			<hr>
-			<h1>Contraseña</h1>
-			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Ingrese su Contraseña">
-			<hr>
-			<p>Olvidé mi contraseña</p>
-			<a href="gracias por unirte.html"><input class="Boton" type="submit" value="Iniciar sesión"></a>
+			<form method="post" action="" target="_blank">
+				<label>Email</label>
+				<input class="Controles" type="text" name="email" id="email" placeholder="Ingrese su Email">
+				<hr>
+				<label>Contraseña</label>
+				<input class="Controles" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
+				<hr>
+			</form>
+			<div>
+				<input class="olvidaste-contraseña" type="submit" value="Olvidé mi contraseña">
+			</div>
+			<div>
+				<a href="gracias por unirte.html"><input class="Boton-iniciarsesion" type="submit" value="Iniciar sesión"></a>
+			</div>
 		</section>
 	</main>
 </body>
