--- a/registrarse.html
+++ b/registrarse.html
@@ -14,20 +14,23 @@
 		</section>
 		
 		<section class="Formulario-registro">
-			<h1>Nombre</h1>
-			<input class="Controles" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
-			<hr>
-			<h1>Apellido</h1>
-			<input class="Controles" type="text" name="nombres" id="apellido" placeholder="Ingrese su Apellido">
-			<hr>
-			<h1>Email</h1>
-			<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
-			<hr>
-			<h1>Contraseña</h1>
-			<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
-			<hr>
-			<input class="Boton" type="submit" value="Registrarse">
-		
+			<form method="post" action="" target="_blank">
+				<label>Nombre</label>
+				<input class="Controles" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+				<hr>
+				<label>Apellido</label>
+				<input class="Controles" type="text" name="nombres" id="apellido" placeholder="Ingrese su Apellido">
+				<hr>
+				<label>Email</label>
+				<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
+				<hr>
+				<label>Contraseña</label>
+				<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
+				<hr>
+				<div>
+					<input class="Boton-registrarse" type="submit" value="Registrarse">
+				</div>
+			</form>
 		</section>
 		
 	</main>
