--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		
-		<div>
+		<div class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
@@ -34,12 +34,12 @@
 	<main class="maincolumnas flex-column">
 		
 		<section class="flex-row">
+			
 			<article class="columnaizq">
 			</article>
 		
 			<section class="columnader flex-column">
-			
-			
+				
 					<h1>¿Qué podés encontrar?</h1>
 					<p class="textoquepodesencontrar">Variedad de recetas y restaurantes aptos para  celíacos, con la posibilidad de ajustar la búsqueda a  tus gustos. Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
 			
@@ -55,20 +55,22 @@
 					<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
 					<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 				
-			
 			</section>
 			
 		</section>
 		
 		<section class="circulos flex-row">
+			
 				<article>
 					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
 					<h3>Restaurantes</h3>
 				</article>
+			
 				<div>
 					<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
 					<h3>Recetas</h3>
 				</div>
+			
 		</section>
 		
 	</main>
@@ -77,7 +79,7 @@
 		
 		<section>
 			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
-<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
+			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
 		<section>
