--- a/foro.html
+++ b/foro.html
@@ -45,19 +45,19 @@
 			<article>
 				<h4>Florencia</h4>
 				<p>Hace muy poco me confirmaron el diagnóstico... ¿Es muy complicado respetar una dieta sin tacc?</p>
-				<input class="boton" type="button" value="Ver 3 respuestas|Responder">
+				<a target="_blank" href="#">Ver 3 respuestas|Responder</a>
 			</article>
 			
 			<article>
 				<h4>Claudia</h4>
 				<p>Mi hijo es celíaco y esta por cumplir 5 años, que torta me recomiendan que le prepare?</p>
-				<input class="boton" type="button" value="Ver 6 respuestas|Responder">
+				<a target="_blank" href="#">Ver 6 respuestas|Responder</a>
 			</article>
 			
 			<article>
 				<h4>Santiago</h4>
 				<p>¿Qué pasa cuando un celíaco come gluten, existe una reacción inmediata o puede ser acumulativa y presentar síntomas después?</p>
-				<input class="boton" type="button" value="Ver 2 respuestas|Responder">
+				<a target="_blank" href="#">Ver 2 respuestas|Responder</a>
 			</article>
 			
 		</section>
@@ -66,17 +66,17 @@
 			<h3>Sitios que podrían interesarte</h3>
 			
 			<article>
-				<input class="boton" type="button" value="Ver blog">
+				<a target="_blank" href="https://www.disfrutandosingluten.es/">Ver blog</a>
 				<p>Es un blog español donde vas a poder encontrar recetas, experiencias, reflexiones e información sobre celíaquia. Además tiene una tienda online donde vas a poder adquirir sus productos.</p>
 			</article>
 			
 			<article>
-				<input class="boton" type="button" value="Ver Instagram">
+				<a target="_blank" href="https://www.instagram.com/sinesteeesia/">Ver instagram</a>  
 				<p>Es una ilustradora que dibuja  situaciones cotidianas a las que se enfrentan los celíacos que seguro te vas a sentir identificado.</p>
 			</article>
 			
 			<article>
-				<input class="boton" type="button" value="Ver la web">
+				<a target="_blank" href="https://www.soyceliaconoextraterrestre.com/">Ver la web</a>
 				<p>Donde podrás encontrar recetas sin TACC muy fáciles y mucha información útil.</p>
 			</article>
 			
