--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -60,7 +60,7 @@
 				<h8>Fui y me encanto, riquisima la comida</h8>
 				<h7>Pablo</h7>
 				<h8>Excelente atención, volvería mil veces más. Riquisimo todo</h8>
-				<input class="botonverforo" type="submit" value="Ver foro">
+				<a class="botonverforo" target="_blank" href="foro.html">Ver foro</a>
 				<h6>Contanos que te pareció este lugar</h6>
 			<h8>Comentar</h8>
 			</section>
