--- a/foro.html
+++ b/foro.html
@@ -40,48 +40,38 @@
 			  Además vas a encontrar páginas que recomendamos para el mundo celíaco.</p>
 		</section>
 		
-		<section class="preguntas">
-			<h3>Preguntas que podrían interesarte</h3>
-			<article>
-				<h4>Florencia</h4>
-				<p>Hace muy poco me confirmaron el diagnóstico... ¿Es muy complicado respetar una dieta sin tacc?</p>
-				<a target="_blank" href="#">Ver 3 respuestas|Responder</a>
+		<section>
+			<article class="preguntas">
+				<h3>Preguntas que podrían interesarte</h3>
+				<div class="personas">
+					<h4>Florencia</h4>
+					<p>Hace muy poco me confirmaron el diagnóstico... ¿Es muy complicado respetar una dieta sin tacc?</p>
+					<a target="_blank" href="#">Ver 3 respuestas|Responder</a>
+				</div>
+				<div class="personas">
+					<h4>Claudia</h4>
+					<p>Mi hijo es celíaco y esta por cumplir 5 años, que torta me recomiendan que le prepare?</p>
+					<a target="_blank" href="#">Ver 6 respuestas|Responder</a>
+				</div>
+				<div class="personas">
+					<h4>Santiago</h4>
+					<p>¿Qué pasa cuando un celíaco come gluten, existe una reacción inmediata o puede ser acumulativa y presentar síntomas después?</p>
+					<a target="_blank" href="#">Ver 2 respuestas|Responder</a>
+				</div>
 			</article>
-			
-			<article>
-				<h4>Claudia</h4>
-				<p>Mi hijo es celíaco y esta por cumplir 5 años, que torta me recomiendan que le prepare?</p>
-				<a target="_blank" href="#">Ver 6 respuestas|Responder</a>
-			</article>
-			
-			<article>
-				<h4>Santiago</h4>
-				<p>¿Qué pasa cuando un celíaco come gluten, existe una reacción inmediata o puede ser acumulativa y presentar síntomas después?</p>
-				<a target="_blank" href="#">Ver 2 respuestas|Responder</a>
-			</article>
-			
-		</section>
 		
-		<section class="sitios">
-			<h3>Sitios que podrían interesarte</h3>
-			
-			<article>
+			<article class="sitios">
+				<h3>Sitios que podrían interesarte</h3>
 				<a target="_blank" href="https://www.disfrutandosingluten.es/">Ver blog</a>
 				<p>Es un blog español donde vas a poder encontrar recetas, experiencias, reflexiones e información sobre celíaquia. Además tiene una tienda online donde vas a poder adquirir sus productos.</p>
-			</article>
-			
-			<article>
+
 				<a target="_blank" href="https://www.instagram.com/sinesteeesia/">Ver instagram</a>  
 				<p>Es una ilustradora que dibuja  situaciones cotidianas a las que se enfrentan los celíacos que seguro te vas a sentir identificado.</p>
-			</article>
-			
-			<article>
+
 				<a target="_blank" href="https://www.soyceliaconoextraterrestre.com/">Ver la web</a>
 				<p>Donde podrás encontrar recetas sin TACC muy fáciles y mucha información útil.</p>
 			</article>
-			
 		</section>
-		
 	</main>
 	
 	<footer>
