--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Recetas | TACC FREE</title>
-	<link href="estilos.css" rel="stylesheet" type="text/css">
+<title>Recetas dulces | TACC FREE</title><link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	
 	<header>
 		
 		<div class="logobotonera">
@@ -31,30 +31,66 @@
 		
 	</header>
 	
-	
 	<main class="maincards flex-column">
 	
-		<h3>Recetas</h3>
+		<h3>Recetas dulces</h3>
 			
-		<section class="circulos flex-row">
+		<section class="flex-row sectioncards">
 			
-				<a href="recetas dulces.html"><article>
-					<img src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
-					<h3 class="letrasnaranjas">Dulces</h3>
-				</article></a>
 			
-				<a href="recetas saladas.html"><div>
-					<img src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
-					<h3 class="letrasnaranjas">Saladas</h3>
-				</div></a>
+			<div class="cards flex-column">
+				<img src="img/recetas dulces/tartalimón.png">
+				<h6>Tarta de limon</h6>
 			
+			
+			</div>
+			
+			<div class="cards flex-column">
+				<img src="img/recetas dulces/brownies.png">
+				<h6>Brownies</h6>
+			
+			</div>
+			<div class="cards flex-column">
+				<img src="img/recetas dulces/budín.png">
+				<h6>Budin</h6>
+			
+			
+			</div>
+			<div class="cards flex-column">
+			 <img src="img/recetas dulces/cheesecake.png">
+				<h6>Cheesecake</h6>
+			
+			
+			</div>
 		</section>
 			
+		<section class="flex-row sectioncards">
+			<div class="cards flex-column">
+			<img src="img/recetas dulces/cookies.png">
+			<h6>Cookies</h6>	 
+				 </div>
+			
+			<div class="cards flex-column">
+				<img src="img/recetas dulces/pancakes.png">
+				<h6>Pancakes</h6>
+			
+			</div>
+			
+			<div class="cards flex-column">
+			<img src="img/recetas dulces/alfajores.png">
+			<h6>Alfajores</h6>	 
+				 </div>
+			
+			<div class="cards flex-column">
+			 <img src="img/recetas dulces/tiramisu.png">
+				<h6>Tiramisu</h6>
+			
+			
+			</div>
+		</section>
 		
-		
-	
 	</main>
-
+	
 	<footer>
 		<section>
 			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
@@ -84,8 +120,6 @@
 		</section>
 		
 	</footer>
-	
-	
-	
+
 </body>
 </html>
