--- a/restaurantes.html
+++ b/restaurantes.html
@@ -10,34 +10,81 @@
 
 <body>
 	
-	<header>
+<header>
 		
-		<div>
+		<div class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		<nav class="botoneraheader">
 			<ul>
-				<li><a href="#">Restaurantes</a></li>
-				<li><a href="#">Recetas</a>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li><a href="#">Dulces</a></li>
-						<li><a href="#">Saladas</a></li>
+						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Foro</a></li>
+				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
 	</header>
 	
-	<main class="mainrestaurantes">
+	<main class="maincards flex-column">
 	
+		<h3>Restaurantes</h3>
+			
+		<section class="flex-row sectioncards">
+			<a href="sintaxispalermo.html"><div class="cards flex-column">
+			<img src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
+			<h6>Sintaxis Palermo</h6>	 
+				 </div></a>
+			
+			<div class="cards flex-column">
+				<img src="img/restaurantes/campobravo.png">
+				<h6>Campo Bravo</h6>
+			
+			</div>
+			<div class="cards flex-column">
+				<img src="img/restaurantes/eggs_gree.png">
+				<h6>Eggs &amp; Greens</h6>
 			
 			
+			</div>
+			<div class="cards flex-column">
+			 <img src="img/restaurantes/goutcafé.png">
+				<h6>Gout Caf&eacute;</h6>
 			
-		
+			
+			</div>
+		</section>
+			
+		<section class="flex-row sectioncards">
+			<div class="cards flex-column">
+			<img src="img/restaurantes/launion.png">
+			<h6>La uni&oacute;n</h6>	 
+				 </div>
+			
+			<div class="cards flex-column">
+				<img src="img/restaurantes/letitv.png">
+				<h6>Let it V</h6>
+			
+			</div>
+			<div class="cards flex-column">
+				<img src="img/restaurantes/osanegra.png">
+				<h6>Osa Negra</h6>
+			
+			
+			</div>
+			<div class="cards flex-column">
+			 <img src="img/restaurantes/whoopies.png">
+				<h6>Whoopies</h6>
+			
+			
+			</div>
+		</section>
 		
 	</main>
 	
