--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<header>
+<header>
 		
 		<div class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
@@ -17,14 +17,14 @@
 		
 		<nav class="botoneraheader">
 			<ul>
-				<li><a href="#">Restaurantes</a></li>
-				<li><a href="#">Recetas</a>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li><a href="#">Dulces</a></li>
-						<li><a href="#">Saladas</a></li>
+						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Foro</a></li>
+				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			</ul>
 		</nav>
@@ -33,7 +33,7 @@
 	
 	<main class="maincolumnas">
 		
-		<section class="sectionbienvenida flex-row">
+		<section class="flex-row">
 			
 			<article class="columnaizq">
 			</article>
@@ -41,11 +41,11 @@
 			<section class="columnader">
 				
 				<div>
-					<h1 class="graciasporunirte">¡Gracias por unirte!</h1>
+					<h1>¡Gracias por unirte!</h1>
 					<p class="textoquepodesencontrarbienvenida">Con nosotros vas a poder conocer variedad de recetas y restaurantes aptos para celiacos, con la posibilidad de ajustar la búsqueda a tus gustos! Además, vas a poder comunicarte con otras personas, compartir consejos y experiencias. </p>
 				</div>
 			
-				<div class="contaminacionbienvenido">
+				<div>
 					<h2>¿Sabes lo que es la contaminación cruzada?</h2>
 					<p class="textosabesloquees">La celiaquia es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada, es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensilios para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 				</div>
@@ -56,15 +56,15 @@
 		
 		<section class="circulos flex-row">
 			
-			<article>
-					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-					<h3>Restaurantes</h3>
-			</article>
+				<a href="restaurantes.html"><article>
+					<img src="img/portadas circulares grandes/portadarestaurantes.png" width="320" height="320" alt="imgresto"/>
+					<h3 id="letrasblancas">Restaurantes</h3>
+				</article></a>
 			
-			<div>
-				<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
-				<h3>Recetas</h3>
-			</div>
+				<a href="recetas.html"><div>
+					<img src="img/portadas circulares grandes/portadarecetas.png" width="320" height="320" alt="imgreceta"/>
+					<h3 id="letrasnaranjas">Recetas</h3>
+				</div></a>
 			
 		</section>
 		
