--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+	
 	<header>
 		
 		<div class="logobotonera">
@@ -17,14 +18,14 @@
 		
 		<nav class="botoneraheader">
 			<ul>
-				<li><a href="#">Restaurantes</a></li>
-				<li><a href="#">Recetas</a>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li class="submenu"><a href="#">Dulces</a></li>
-						<li class="submenu"><a href="#">Saladas</a></li>
+						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Foro</a></li>
+				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			</ul>
 		</nav>
@@ -61,15 +62,15 @@
 		
 		<section class="circulos flex-row">
 			
-				<article>
-					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="imgresto"/>
-					<h3>Restaurantes</h3>
-				</article>
+				<a href="restaurantes.html"><article>
+					<img src="img/portadas circulares grandes/portadarestaurantes.png" width="320" height="320" alt="imgresto"/>
+					<h3 class="letrasblancas">Restaurantes</h3>
+				</article></a>
 			
-				<div>
-					<img src="img/recetas saladas/ñoquis.png" width="320" height="320" alt="imgreceta"/>
-					<h3>Recetas</h3>
-				</div>
+				<a href="recetas.html"><div>
+					<img src="img/portadas circulares grandes/portadarecetas.png" width="320" height="320" alt="imgreceta"/>
+					<h3 class="letrasnaranjas">Recetas</h3>
+				</div></a>
 			
 		</section>
 		
