--- a/pizza.html
+++ b/pizza.html
@@ -9,23 +9,22 @@
 </head>
 
 <body>
-	
 	<header>
 		
-		<div>
+		<div class="logobotonera">
 			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
 		</div>
 		
 		<nav class="botoneraheader">
 			<ul>
-				<li><a href="#">Restaurantes</a></li>
-				<li><a href="#">Recetas</a>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li><a href="#">Dulces</a></li>
-						<li><a href="#">Saladas</a></li>
+						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Foro</a></li>
+				<li><a href="foro.html">Foro</a></li>
 				<li><a href="#">Mi perfil</a></li>
 			</ul>
 		</nav>
