--- a/foro.html
+++ b/foro.html
@@ -26,13 +26,13 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
 	</header>
 	
-	<main>
+	<main class="foro flex-column">
 		<section>
 			<h1 class="forobienvenido">Bienvenidx a la comunidad</h1>
 			<h2 class="forotacfree">Tac Free</h2>
