--- a/gracias por unirte.html
+++ b/gracias por unirte.html
@@ -25,13 +25,13 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
 	</header>
 	
-	<main class="maincolumnas">
+	<main class="maincolumnas flex-column">
 		
 		<section class="flex-row">
 			
@@ -57,7 +57,7 @@
 		<section class="circulos flex-row">
 			
 				<a href="restaurantes.html"><article>
-					<img src="img/portadas circulares grandes/portadarestaurantes.png" width="320" height="320" alt="imgresto"/>
+					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="restaurante"/>
 					<h3 id="letrasblancas">Restaurantes</h3>
 				</article></a>
 			
