--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
@@ -63,7 +63,7 @@
 		<section class="circulos flex-row">
 			
 				<a href="restaurantes.html"><article>
-					<img src="img/portadas circulares grandes/portadarestaurantes.png" width="320" height="320" alt="imgresto"/>
+					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="restaurante"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article></a>
 			
