--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Iniciar sesion | TACC FREE</title>
-	<link href="estilos-iniciar-sesion.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	
 	<main>
+		
 		<section class="logo">
 			<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
 		</section>
@@ -23,12 +24,15 @@
 				<input class="Controles" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
 				<hr>
 			</form>
+			
 			<div>
 				<input class="olvidaste-contraseña" type="submit" value="Olvidé mi contraseña">
 			</div>
+			
 			<div>
 				<a href="gracias por unirte.html"><input class="Boton-iniciarsesion" type="submit" value="Iniciar sesión"></a>
 			</div>
+			
 		</section>
 	</main>
 	
