--- a/pizza.html
+++ b/pizza.html
@@ -25,13 +25,13 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
 	</header>
 	
-	<main>
+	<main class="flex-row">
 		<section class="información">
 			<h1>Pizza</h1>
 			<ul>
