--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -25,68 +25,62 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
 	</header>
 	
-<main class="maincards flex-column">
+	<main class="maincards flex-column">
 	
-		<h3>Recetas saladas</h3>
+		<h3 class="titulorecetas">Recetas saladas</h3>
 			
 		<section class="flex-row sectioncards">
 			
-			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/lasagna.png">
-				<h6>Lasagna</h6>
-			
-			
+				<img src="img/recetas saladas/lasagna.png" width="200" height="200" alt="pizza"/>
+				<h6 class="recetasdulcestitulos">Pizza</h6> /*--cambiar a pizza--*/
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/ñoquis.png">
-				<h6>&Ntilde;oquis</h6>
-			
+				<img src="img/recetas saladas/ñoquis.png" width="200" height="200" alt="ñoquis"/>
+				<h6 class="recetasdulcestitulos">&Ntilde;oquis</h6>
 			</div>
+			
 			<div class="cards flex-column">
-				<img src="img/recetas saladas/sandwich.png">
-				<h6>Sandwich</h6>
-			
-			
+				<img src="img/recetas saladas/sandwich.png" width="200" height="200" alt="sandwich"/>
+				<h6 class="recetasdulcestitulos">Sandwich</h6>
 			</div>
+			
 			<div class="cards flex-column">
-			 <img src="img/recetas dulces/cheesecake.png">
-				<h6>Cheesecake</h6>
-			
-			
+				<img src="img/recetas dulces/cheesecake.png">
+				<h6 class="recetasdulcestitulos">Tacos</h6>  /*--cambiar a tacos--*/
 			</div>
+			
 		</section>
 			
 		<section class="flex-row sectioncards">
+			
 			<div class="cards flex-column">
-			<img src="img/recetas dulces/cookies.png">
-			<h6>Cookies</h6>	 
-				 </div>
+				<img src="img/recetas dulces/cookies.png">
+				<h6 class="recetasdulcestitulos">Hamburguesa</h6> /*--cambiar a hamburgesa--*/
+			</div>
 			
 			<div class="cards flex-column">
 				<img src="img/recetas dulces/pancakes.png">
-				<h6>Pancakes</h6>
-			
+				<h6 class="recetasdulcestitulos">Croqutas</h6> /*--cambiar a croquetas--*/
 			</div>
 			
 			<div class="cards flex-column">
-			<img src="img/recetas dulces/alfajores.png">
-			<h6>Alfajores</h6>	 
-				 </div>
+				<img src="img/recetas dulces/alfajores.png">
+				<h6 class="recetasdulcestitulos">Tarta de Queso</h6> /*--cambiar a tarta de queso--*/
+			</div>
 			
 			<div class="cards flex-column">
-			 <img src="img/recetas dulces/tiramisu.png">
-				<h6>Tiramisu</h6>
-			
-			
+				<img src="img/recetas dulces/tiramisu.png">
+				<h6 class="recetasdulcestitulos">Lasagna</h6> /*--cambiar a lasagna--*/
 			</div>
+			
 		</section>
 		
 	</main>
