--- a/recetas.html
+++ b/recetas.html
@@ -25,7 +25,7 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
@@ -34,25 +34,22 @@
 	
 	<main class="maincards flex-column">
 	
-		<h3>Recetas</h3>
+		<h3 class="titulorecetas">Recetas</h3>
 			
 		<section class="circulos flex-row">
 			
 				<a href="recetas dulces.html"><article>
 					<img src="img/portadas circulares grandes/portadadulces.png" width="320" height="320" alt="imgresto"/>
-					<h3 class="letrasnaranjas">Dulces</h3>
+					<h3 class="recetasdulcestitulos">Dulces</h3>
 				</article></a>
 			
 				<a href="recetas saladas.html"><div>
 					<img src="img/portadas circulares grandes/portadasaladas.png" width="320" height="320" alt="imgreceta"/>
-					<h3 class="letrasnaranjas">Saladas</h3>
+					<h3 class="recetasdulcestitulos">Saladas</h3>
 				</div></a>
 			
 		</section>
 			
-		
-		
-	
 	</main>
 
 	<footer>
