--- a/recetas dulces.html
+++ b/recetas dulces.html
@@ -25,7 +25,7 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
@@ -33,60 +33,54 @@
 	
 	<main class="maincards flex-column">
 	
-		<h3>Recetas dulces</h3>
+		<h3 class="titulorecetas">Recetas dulces</h3>
 			
 		<section class="flex-row sectioncards">
 			
-			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/tartalimón.png">
-				<h6>Tarta de limon</h6>
-			
-			
+				<img src="img/recetas dulces/tartalimón.png" width="200" height="200" alt="tartalimon"/>
+				<h6 class="recetasdulcestitulos">Tarta de limon</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/brownies.png">
-				<h6>Brownies</h6>
-			
+				<img src="img/recetas dulces/brownies.png" width="200" height="200" alt="brownies"/>
+				<h6 class="recetasdulcestitulos">Brownies</h6>
 			</div>
+			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/budín.png">
-				<h6>Budin</h6>
-			
-			
+				<img src="img/recetas dulces/budín.png" width="200" height="200" alt="budin"/>
+				<h6 class="recetasdulcestitulos">Budin</h6>
 			</div>
+			
 			<div class="cards flex-column">
-			 <img src="img/recetas dulces/cheesecake.png">
-				<h6>Cheesecake</h6>
-			
-			
+				<img src="img/recetas dulces/cheesecake.png" width="200" height="200" alt="cheesecake"/>
+				<h6 class="recetasdulcestitulos">Cheesecake</h6>
 			</div>
+			
 		</section>
 			
 		<section class="flex-row sectioncards">
-			<div class="cards flex-column">
-			<img src="img/recetas dulces/cookies.png">
-			<h6>Cookies</h6>	 
-				 </div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/pancakes.png">
-				<h6>Pancakes</h6>
-			
+				<img src="img/recetas dulces/cookies.png" width="200" height="200" alt="cookies"/>
+				<h6 class="recetasdulcestitulos">Cookies</h6>
 			</div>
 			
 			<div class="cards flex-column">
-			<img src="img/recetas dulces/alfajores.png">
-			<h6>Alfajores</h6>	 
-				 </div>
+				<img src="img/recetas dulces/pancakes.png" width="200" height="200" alt="pancakes"/>
+				<h6 class="recetasdulcestitulos">Pancakes</h6>
+			</div>
 			
 			<div class="cards flex-column">
-			 <img src="img/recetas dulces/tiramisu.png">
-				<h6>Tiramisu</h6>
-			
-			
+				<img src="img/recetas dulces/alfajores.png" width="200" height="200" alt="alfajor"/>
+				<h6 class="recetasdulcestitulos">Alfajores</h6>	 
 			</div>
+			
+			<div class="cards flex-column">
+				<img src="img/recetas dulces/tiramisu.png" width="200" height="200" alt="tiramisu"/>
+				<h6 class="recetasdulcestitulos">Tiramisu</h6>
+			</div>
+			
 		</section>
 		
 	</main>
