--- a/registrarse.html
+++ b/registrarse.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Resgitrarse | TACC FREE</title>
-	<link href="estilos-formularios.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
 </head>
 
@@ -16,21 +16,24 @@
 		<section class="Formulario-registro">
 			<form method="post" action="" target="_blank">
 				<label>Nombre</label>
-				<input class="Controles" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+				<input class="Controles registro" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
 				<hr>
 				<label>Apellido</label>
-				<input class="Controles" type="text" name="nombres" id="apellido" placeholder="Ingrese su Apellido">
+				<input class="Controles registro" type="text" name="nombres" id="apellido" placeholder="Ingrese su Apellido">
 				<hr>
 				<label>Email</label>
-				<input class="Controles" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
+				<input class="Controles registro" type="email" name="nombres" id="email" placeholder="Ingrese su Email">
 				<hr>
 				<label>Contraseña</label>
-				<input class="Controles" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
-				<hr>
-				<div>
-					<input class="Boton-registrarse" type="submit" value="Registrarse">
-				</div>
 			</form>
+				
+				<input class="Controles registro" type="password" name="nombres" id="contraseña" placeholder="Al menos 8 caracteres">
+				<hr>
+				
+				<div>
+					<a href="gracias por unirte.html"><input class="Boton-registrarse" type="submit" value="Registrate"></a>
+				</div>
+			
 		</section>
 		
 	</main>
