--- a/restaurantes.html
+++ b/restaurantes.html
@@ -26,7 +26,7 @@
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="#">Mi perfil</a></li>
+				<li><a href="gracias por unirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
@@ -34,56 +34,55 @@
 	
 	<main class="maincards flex-column">
 	
-		<h3>Restaurantes</h3>
+		<h3 class="titulorecetas">Restaurantes</h3>
 			
 		<section class="flex-row sectioncards">
-			<a href="sintaxispalermo.html"><div class="cards flex-column">
-			<img src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
-			<h6>Sintaxis Palermo</h6>	 
-				 </div></a>
+			<a href="sintaxispalermo.html">
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/campobravo.png">
-				<h6>Campo Bravo</h6>
+				<img src="img/restaurantes/sintaxis.png" width="200px" height="200px" alt="sintaxis">
+				<h6 class="recetasdulcestitulos">Sintaxis Palermo</h6>	 
+			</div></a>
 			
-			</div>
 			<div class="cards flex-column">
-				<img src="img/restaurantes/eggs_gree.png">
-				<h6>Eggs &amp; Greens</h6>
-			
-			
+				<img src="img/restaurantes/campobravo.png" width="200" height="200" alt="campo bravo"/>
+				<h6 class="recetasdulcestitulos">Campo Bravo</h6>
 			</div>
+			
 			<div class="cards flex-column">
-			 <img src="img/restaurantes/goutcafé.png">
-				<h6>Gout Caf&eacute;</h6>
-			
-			
+				<img src="img/restaurantes/eggs_gree.png" width="200" height="200" alt="eggs"/>
+				<h6 class="recetasdulcestitulos">Eggs &amp; Greens</h6>
 			</div>
+			
+			<div class="cards flex-column">
+				<img src="img/restaurantes/goutcafé.png" width="200" height="200" alt="gout"/>
+				<h6 class="recetasdulcestitulos">Gout Caf&eacute;</h6>
+			</div>
+			
 		</section>
 			
 		<section class="flex-row sectioncards">
-			<div class="cards flex-column">
-			<img src="img/restaurantes/launion.png">
-			<h6>La uni&oacute;n</h6>	 
-				 </div>
 			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/letitv.png">
-				<h6>Let it V</h6>
-			
+				<img src="img/restaurantes/launion.png" width="200" height="200" alt="launion"/>
+				<h6 class="recetasdulcestitulos">La uni&oacute;n</h6>	 
 			</div>
+			
 			<div class="cards flex-column">
-				<img src="img/restaurantes/osanegra.png">
-				<h6>Osa Negra</h6>
-			
-			
+				<img src="img/restaurantes/letitv.png" width="200" height="200" alt="letitv"/>
+				<h6 class="recetasdulcestitulos">Let it V</h6>
 			</div>
+			
 			<div class="cards flex-column">
-			 <img src="img/restaurantes/whoopies.png">
-				<h6>Whoopies</h6>
-			
-			
+				<img src="img/restaurantes/osanegra.png" width="200" height="200" alt="osanegra"/>
+				<h6 class="recetasdulcestitulos">Osa Negra</h6>
 			</div>
+			
+			<div class="cards flex-column">
+				<img src="img/restaurantes/whoopies.png" width="200" height="200" alt=""/>
+				<h6 class="recetasdulcestitulos">Whoopies</h6>
+			</div>
+			
 		</section>
 		
 	</main>
