cambio de imagenes

--- a/recetas saladas.html
+++ b/recetas saladas.html
@@ -53,8 +53,8 @@
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/cheesecake.png">
-				<h6 class="recetasdulcestitulos">Tacos</h6>  /*--cambiar a tacos--*/
+				<img src="img/recetas saladas/tacos.png">
+				<h6 class="recetasdulcestitulos">Tacos</h6>  
 			</div>
 			
 		</section>
@@ -62,23 +62,23 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/cookies.png">
-				<h6 class="recetasdulcestitulos">Hamburguesa</h6> /*--cambiar a hamburgesa--*/
+				<img src="img/recetas saladas/hamburguesa.png">
+				<h6 class="recetasdulcestitulos">Hamburguesa</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/pancakes.png">
-				<h6 class="recetasdulcestitulos">Croqutas</h6> /*--cambiar a croquetas--*/
+				<img src="img/recetas saladas/croquetas.png">
+				<h6 class="recetasdulcestitulos">Croquetas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/alfajores.png">
-				<h6 class="recetasdulcestitulos">Tarta de Queso</h6> /*--cambiar a tarta de queso--*/
+				<img src="img/recetas saladas/empanadas.png">
+				<h6 class="recetasdulcestitulos">Empanadas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img src="img/recetas dulces/tiramisu.png">
-				<h6 class="recetasdulcestitulos">Lasagna</h6> /*--cambiar a lasagna--*/
+				<img src="img/recetas saladas/lasagna.png">
+				<h6 class="recetasdulcestitulos">Lasagna</h6> 
 			</div>
 			
 		</section>
